# parseMidi

./: CMakeLists.txt
examples/: main.cpp  parseMIDI.cpp  parseMIDI.h
